fix: add proper userId mapping in PostMapper with MapStruct